[package]
name = "client-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonwebtoken = { version = "10.3", default-features = false, features = ["use_pem", "rust_crypto", "simple_asn1"] }
log = "0.4.29"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"
tokio = { version = "1.50.0", features = ["full"] }

[dev-dependencies]
ed25519-dalek = { version = "2.2", features = ["pem", "pkcs8", "rand_core"] }
pem = "3.0.6"
rand = "0.8"
ring = "0.17.14"
