[package]
name = "license-issuer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
client-lib = { version = "0.1.0", path = "../client-lib" }
jsonwebtoken = "10.3.0"
pem = "3.0.6"
rand = "0.10.0"
ring = "0.17.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = "0.3.47"
